@@ -1,11 +1,12 @@
 Version 1.7.1+svn:
-  * Graphics
-    * New portrait for male and female Footpad.
+ * Graphics:
+   * New portrait for male and female Footpad.
  * Language and i18n:
    * Updated translations: Estonian, Finnish, German, Lithuanian, Polish,
      Serbian
  * User interface:
    * Add an icon to show whether or not the user finished a campaign
+   * Fixed bug #13831: Bug with team labels
  * Miscellaneous and bugfixes:
    * Fixed language switch not affecting unit descriptions (bug #13827)
    * Fixed teleporting to impassable terrain (bug #13795)
